Refactor for readability: dedupe API calls and DTO mapping, drop dead code
- Add ui/src/Services/api.js (apiFetch) and replace ~15 hardcoded
  localhost:8080 fetch blocks across all pages/services
- Collapse duplicated add/remove favorite handlers in HomePage into one
- Extract PatchNoteResponseDTO mapping into PatchNoteService.toResponseDTO,
  replacing three copies in PatchNoteController and one in PackageInsightsService
- Delete dead code: empty userService.js, unused SearchBar component,
  unmapped ApiController.getCurrentUser, no-op POST /tech/{id}
- Remove debug console.log/System.out.println and stray meta tags
- Fix logo/spinner asset paths to imports so production builds work
- Fix response.error bugs in login/register error messages
- Map 'next' package to Next.js tech now that it exists in the catalog
- Remove duplicate AuthUserProvider wrapper in App.jsx
- Untrack crawler storage/, test-results/, ui/dist; extend .gitignore

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>