@@ -2,29 +2,22 @@ package com.barrcon.patchy.controllers;
 
 import com.barrcon.patchy.dto.CrawledNoteDTO;
 import com.barrcon.patchy.dto.PatchNoteResponseDTO;
-import com.barrcon.patchy.models.PatchNote;
 import com.barrcon.patchy.models.Tech;
 import com.barrcon.patchy.repositories.PatchNoteRepository;
 import com.barrcon.patchy.repositories.TechRepository;
 import com.barrcon.patchy.repositories.UserRepository;
 import com.barrcon.patchy.services.PatchNoteService;
-import com.barrcon.patchy.services.PatchNoteCategoryService;
-import com.barrcon.patchy.services.PatchNoteSectionService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
-
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @RestController
 @CrossOrigin(origins = "http://localhost:5173")
 public class PatchNoteController {
-
-
 
     @Autowired
     private PatchNoteRepository patchNoteRepository;
@@ -38,36 +31,22 @@ public class PatchNoteController {
     @Autowired
     private PatchNoteService patchNoteService;
 
-    @Autowired
-    private PatchNoteCategoryService patchNoteCategoryService;
-
-    @Autowired
-    private PatchNoteSectionService patchNoteSectionService;
-    //Receives crawled patch note data from crawler service
+    // Receives crawled patch note data from the crawler service
     @PostMapping("/api/process-crawled-notes")
     public ResponseEntity<String> processCrawledNotes(@RequestBody List<CrawledNoteDTO> crawledData) {
-
-
         int updatedCount = 0;
         int skippedCount = 0;
 
         try {
             for (CrawledNoteDTO item : crawledData) {
-                String techName = item.getTechName();
-                String content = item.getContent();
-                String url = item.getUrl();
-                String releaseVersion = item.getReleaseVersion();
-
-                Optional<Tech> techOptional = techRepository.findByName(techName);
+                Optional<Tech> techOptional = techRepository.findByName(item.getTechName());
                 if (techOptional.isEmpty()) {
-
                     skippedCount++;
                     continue;
                 }
 
-                Tech tech = techOptional.get();
                 PatchNoteService.ProcessResult result = patchNoteService.processAndSave(
-                        tech, content, url, releaseVersion);
+                        techOptional.get(), item.getContent(), item.getUrl(), item.getReleaseVersion());
 
                 if (result.updated()) {
                     updatedCount++;
@@ -81,71 +60,35 @@ public class PatchNoteController {
             return ResponseEntity.ok(message);
 
         } catch (Exception e) {
-
             return ResponseEntity.badRequest().body("Processing failed: " + e.getMessage());
         }
     }
 
     @GetMapping("/api/patch-notes")
     public ResponseEntity<List<PatchNoteResponseDTO>> getAllPatchNotes() {
-
-        List<PatchNote> patchNotes = patchNoteRepository.findAllByOrderByCreatedAtDesc();
-
-        List<PatchNoteResponseDTO> responseDTOs = patchNotes.stream()
-                .map(pn -> new PatchNoteResponseDTO(
-                        pn.getId(),
-                        pn.getTech().getName(),
-                        pn.getContent(),
-                        pn.getOriginalContent(),
-                        pn.getReleaseVersion(),
-                        resolveCategories(pn),
-                        patchNoteSectionService.parse(pn.getSummarySections()),
-                        pn.getSourceUrl(),
-                        pn.getCreatedAt(),
-                        pn.getLastUpdated()
-                ))
+        List<PatchNoteResponseDTO> responseDTOs = patchNoteRepository.findAllByOrderByCreatedAtDesc().stream()
+                .map(patchNoteService::toResponseDTO)
                 .toList();
 
         return ResponseEntity.ok(responseDTOs);
     }
 
-    //Return a list of user-favorite patchnotes to the front end
+    // Latest patch note for each of the user's favorite techs
     @GetMapping("/api/users/{userId}/patch-notes")
     public ResponseEntity<List<PatchNoteResponseDTO>> getUserPatchNotes(@PathVariable Long userId) {
-
-
         try {
-
-            Optional<com.barrcon.patchy.models.User> userOpt =
-                    userRepository.findById(userId);
-
+            Optional<com.barrcon.patchy.models.User> userOpt = userRepository.findById(userId);
             if (userOpt.isEmpty()) {
                 return ResponseEntity.notFound().build();
             }
 
             Set<Tech> favoriteTechs = userOpt.get().getFavoriteTechs();
 
-            if (favoriteTechs.isEmpty()) {
-                return ResponseEntity.ok(List.of());
-            }
-
-
             List<PatchNoteResponseDTO> userPatchNotes = favoriteTechs.stream()
                     .map(tech -> patchNoteRepository.findFirstByTechOrderByCreatedAtDesc(tech))
                     .filter(Optional::isPresent)
                     .map(Optional::get)
-                    .map(pn -> new PatchNoteResponseDTO(
-                            pn.getId(),
-                            pn.getTech().getName(),
-                            pn.getContent(),
-                            pn.getOriginalContent(),
-                            pn.getReleaseVersion(),
-                            resolveCategories(pn),
-                            patchNoteSectionService.parse(pn.getSummarySections()),
-                            pn.getSourceUrl(),
-                            pn.getCreatedAt(),
-                            pn.getLastUpdated()
-                    ))
+                    .map(patchNoteService::toResponseDTO)
                     .toList();
 
             return ResponseEntity.ok(userPatchNotes);
@@ -170,30 +113,9 @@ public class PatchNoteController {
                 .map(tech -> patchNoteRepository.findFirstByTechOrderByCreatedAtDesc(tech))
                 .filter(Optional::isPresent)
                 .map(Optional::get)
-                .map(pn -> new PatchNoteResponseDTO(
-                        pn.getId(),
-                        pn.getTech().getName(),
-                        pn.getContent(),
-                        pn.getOriginalContent(),
-                        pn.getReleaseVersion(),
-                        resolveCategories(pn),
-                        patchNoteSectionService.parse(pn.getSummarySections()),
-                        pn.getSourceUrl(),
-                        pn.getCreatedAt(),
-                        pn.getLastUpdated()
-                ))
-                .collect(Collectors.toList());
+                .map(patchNoteService::toResponseDTO)
+                .toList();
 
         return ResponseEntity.ok(comparedNotes);
     }
-
-    private List<String> resolveCategories(PatchNote patchNote) {
-        List<String> storedCategories = patchNoteCategoryService.parseStoredCategories(patchNote.getCategories());
-        if (!storedCategories.isEmpty()) {
-            return storedCategories;
-        }
-
-        return patchNoteCategoryService.detectCategories(patchNote.getOriginalContent());
-    }
-
 }
